--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
         <div id="center">
             <h1>WHy are you here?</h1>
             <button onclick="run()">hello boba?</button>
+            <a href="./index.html">Other website?</a>
             <div id="yay"></div>
         </div>
         <script>
