--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div id="center">
             <h1>Free Boba Yay</h1>
             <button onclick="run()">free boba?</button>
+            <a href="./hello.html">Other website?</a>
             <div id="yay"></div>
         </div>
         <script>
