--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,7 @@
     <body>
         <div id="center">
             <h1>WHy are you here?</h1>
+            <img href="/joe_boba.jpg">
             <button onclick="run()">hello boba?</button>
             <a href="./index.html">Other website?</a>
             <div id="yay"></div>
