--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <div id="center">
             <h1>Free Boba Yay</h1>
+            <img href="/joe_boba.jpg">
             <button onclick="run()">free boba?</button>
             <a href="./hello.html">Other website?</a>
             <div id="yay"></div>
